1987 fix on safari by adding png. removed word scroll

--- a/assets/css/reece-history.css
+++ b/assets/css/reece-history.css
@@ -889,6 +889,11 @@
   width: 100%;
   text-align: right;
 }
+@media (max-width: 1200px) {
+  #slide1986 #buildingA-1986-1 div {
+    height: 30%;
+  }
+}
 #slide1986 #buildingB-1986-1 div {
   position: absolute;
   bottom: 16%;
@@ -896,6 +901,11 @@
   height: 40%;
   width: 100%;
   text-align: left;
+}
+@media (max-width: 1200px) {
+  #slide1986 #buildingB-1986-1 div {
+    height: 30%;
+  }
 }
 #slide1986 #ground-1986-1 {
   background-color: #8cc63e;
@@ -987,9 +997,15 @@
   background-color: #00adef;
 }
 #slide1987-3 #map-1987-3 {
-  background-image: url("../images/aboutus/history/1987-3-map.svg");
+  background-image: url("../images/aboutus/history/1987-3-map.png");
   background-size: 100% auto;
-  background-position: center center;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+@media (max-width: 1200px) {
+  #slide1987-3 #map-1987-3 {
+    background-image: url("../images/aboutus/history/1987-3-map.png");
+  }
 }
 #slide1987-3 #label-1987-3 {
   background-image: url("../images/aboutus/history/1987-3-label.svg");
