--- a/assets/less/history-slides/1986.less
+++ b/assets/less/history-slides/1986.less
@@ -13,6 +13,9 @@
 			height: 40%;
 			width: 100%;
 			text-align: right;
+			@media (max-width:1200px){
+				height: 30%;
+			}
 		}
 	}
 	#buildingB-1986-1 {
@@ -23,6 +26,9 @@
 			height: 40%;
 			width: 100%;
 			text-align: left;
+			@media (max-width:1200px){
+				height: 30%;
+			}
 		}
 	}
 	#ground-1986-1 {
