--- a/assets/less/history-slides/1987-3.less
+++ b/assets/less/history-slides/1987-3.less
@@ -20,25 +20,18 @@
 		}
 	}
 	#map-1987-3 {
-		background-image: url("@{imagepath}/1987-3-map.svg");
+		background-image: url("@{imagepath}/1987-3-map.png");
 		background-size: 100% auto;
-		background-position: center center;
-		// div {
-		// 	width: 100%;
-		// 	height: 100%;
-		// 	text-align: center;
-		// 	overflow: hidden;
-		// }
+		background-position: center;
+		background-repeat: no-repeat;
+		@media (max-width:1200px){
+			background-image: url("@{imagepath}/1987-3-map.png");
+		}
+
 	}
 	#label-1987-3 {
 		background-image: url("@{imagepath}/1987-3-label.svg");
 		background-size: 100% auto;
 		background-position: center center;
-		// div {
-		// 	width: 100%;
-		// 	height: 100%;
-		// 	text-align: center;
-		// 	overflow: hidden;
-		// }
 	}
 }
